apps/cluster-bootstrap/argocd-kustomize/argocdgateway.yaml
# +argocd:skip-file-rendering
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gw
  namespace: $argo_namespace
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: argocd-http
  - protocol: TLS
    port: 443
    name: argocd-https
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: Same
