apps/cluster-bootstrap/argocd-kustomize/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gw
      namespace: kube-system
      sectionName: https # Targets your gateway's port 443 listener block
  hostnames:
    - "argocd.10.89.0.10.sslip.io"
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 443 # Routes down into the local secure backend configuration
