apps/cluster-bootstrap/argocd-kustomize/argocdroutehttp.yaml
# +argocd:skip-file-rendering
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: $argo_namespace
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gw
      namespace: kube-system
  hostnames:
    - "10-89-0-10.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
